--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -107,7 +107,7 @@
               <% } else { %>
                 <div class="text-danger" id="coupon-warning"></div>
               <% } %>
-              <% if(!wallet.applied){ %>
+              <% if(!wallet.isApplied){ %>
                 <div class="d-flex align-items-center justify-content-between my-2">
                 <div class="fw-bold"><i class='bx bxs-wallet' style="font-size: 1.4rem;"></i> Balance : &#8377 <%= wallet.balance %></div>
                 <button onclick="useWallet()" class="btn-success">Use</button>
@@ -136,7 +136,7 @@
               </div>
 
               <div class="d-flex justify-content-between" id="coupon-discount">
-                <% if(wallet.applied){ %>
+                <% if(wallet.isApplied){ %>
                 <div class="detail-field">Wallet payment</div>
                 <div class="detail-field text-success">- &#8377 <%= wallet.discount %></div>
                 <% } %>
