--- a/views/partials/userFooter.ejs
+++ b/views/partials/userFooter.ejs
@@ -1,5 +1,5 @@
 <footer id="footer">
-      <div class="address">
+      <div class="footer-address">
         617, Edappally,<br>Bypass road, Maradu,<br>Ernakulam,Kerala <br>India
       </div>
       <div class="actions">
