--- a/views/user/add-address-checkout.ejs
+++ b/views/user/add-address-checkout.ejs
@@ -19,7 +19,7 @@
     />
     <link rel="stylesheet" href="/stylesheets/user/add-address.css" />
     <link rel="stylesheet" href="/stylesheets/user/headerFooter.css" />
-    <title>Document</title>
+    <title>KickStore</title>
   </head>
   <body>
     <%- include('../partials/userHeader.ejs') %>
