--- a/views/user/payment-success.ejs
+++ b/views/user/payment-success.ejs
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link rel="stylesheet" href="/stylesheets/user/payment-success.css" />
-    <title>Document</title>
+    <title>KickStore</title>
   </head>
   <body>
     <main>
