--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/stylesheets/user/profile.css" />
     <link rel="stylesheet" href="/stylesheets/user/headerFooter.css" />
 
-    <title>Document</title>
+    <title>KickStore</title>
   </head>
   <body>
         <%- include('../partials/userHeader.ejs') %>
