--- a/views/user/payment-success.ejs
+++ b/views/user/payment-success.ejs
@@ -8,7 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link rel="stylesheet" href="/stylesheets/user/payment-success.css" />
-    <title>KickStore</title>
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/dfezowkdc/image/upload/v1697096319/kickstore_logo_dbympn.png"
+    />
+    <title>KickStore - home</title>
   </head>
   <body>
     <main>
