--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="/stylesheets/user/profile.css" />
     <link rel="stylesheet" href="/stylesheets/user/headerFooter.css" />
 
-    <title>KickStore</title>
+    <link rel="icon" href="https://res.cloudinary.com/dfezowkdc/image/upload/v1697096319/kickstore_logo_dbympn.png">
+    <title>KickStore - home</title>
   </head>
   <body>
         <%- include('../partials/userHeader.ejs') %>
