--- a/templates/stocksReport.ejs
+++ b/templates/stocksReport.ejs
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KickStore</title>
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/dfezowkdc/image/upload/v1697096319/kickstore_logo_dbympn.png"
+    />
+    <title>KickStore - home</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
