--- a/views/user/view-product.ejs
+++ b/views/user/view-product.ejs
@@ -19,7 +19,8 @@
     />
     <link rel="stylesheet" href="/stylesheets/user/view-product.css" />
     <link rel="stylesheet" href="/stylesheets/user/headerFooter.css">
-    <title>KickStore</title>
+    <link rel="icon" href="https://res.cloudinary.com/dfezowkdc/image/upload/v1697096319/kickstore_logo_dbympn.png">
+    <title>KickStore - home</title>
   </head>
   <body>
         <%- include('../partials/userHeader.ejs') %>
