removed twilio from registration

--- a/views/user-signup.ejs
+++ b/views/user-signup.ejs
@@ -93,7 +93,7 @@
         enctype="multipart/form-data"
       >
         <div class="form-title">Sign up</div>
-        <div>Verification codes have been sent to your phone and email.</div>
+        <div>Verification code has been sent to your email.</div>
 
         <div class="d-flex flex-column align-items-start">
           <label for="emailVerify">Email verification code</label>
@@ -104,18 +104,6 @@
             id="emailVerify"
           />
           <div class="warning" id="emailVerify-warning"></div>
-        </div>
-
-        <div class="d-flex flex-column align-items-start">
-          <label for="phoneVerify">Phone verification code</label>
-          <input
-            type="number"
-            name="phoneVerify"
-            class="text-input"
-            id="phoneVerify"
-          />
-
-          <div class="warning" id="phoneVerify-warning"></div>
         </div>
       </form>
       <button
